<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movies</string>
    <string name="rating" tools:keep="@string/rating">Rating 8.2</string>
    <string name="movie">Movies</string>
    <string name="bookmark">Bookmark</string>
    <string name="overview" tools:keep="@string/overview">After saving the life of their heir apparent, tenacious loner Snake Eyes is welcomed into an ancient Japanese clan called the Arashikage where he is taught the ways of the ninja warrior. But, when secrets from his past are revealed, Snake Eyes honor and allegiance will be tested – even if that means losing the trust of those closest to him.</string>
    <string name="tidak_ada_data" tools:keep="@string/tidak_ada_data">Tidak ada data</string>
    <string name="add_bookmark">Menambahkan ke Bookmark</string>
    <string name="remove_bookmark">Menghapus dari Bookmark</string>
    <string name="img_desc">Gambar poster</string>
    <string name="empty">Empty</string>
    <string name="back" tools:keep="@string/back">Back</string>
    <string name="age" tools:keep="@string/age">13+</string>
    <string name="title_detail" tools:keep="@string/title_detail">Avengers: End Game</string>
    <string name="tile_overview" tools:keep="@string/tile_overview">Overview</string>
    <string name="morning" tools:keep="@string/morning">Good Morning</string>
    <string name="mufkhalif" tools:keep="@string/mufkhalif">Mufkhalif</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="refresh">Muat ulang</string>
    <string name="network_error">Terjadi kesalahan</string>
</resources>